Changes • Changed to BasicCommand from ACF. • Added a config manager. • Added locale messages.yml. • Changed startup behavior. • Added a permission manager.